Wrong socket color for shader sockets, red instead of green #83500

Closed
opened 2020-12-07 13:49:33 +01:00 by Robert Guetzkow · 15 comments

System Information
Affected:
Operating system: Linux-5.4.0-56-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: SVGA3D; build: RELEASE; LLVM; VMware, Inc. 3.3 (Core Profile) Mesa 20.0.8

Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-07 12:13, hash: cf9275dd4e
Worked: Currently checking, likely caused by one of the geometry node related commits.

Short description of error
The color of the shader sockets is currently red instead of green on my Linux build.

Exact steps for others to reproduce the error

  • Open the shader editor
**System Information** *Affected:* Operating system: Linux-5.4.0-56-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: SVGA3D; build: RELEASE; LLVM; VMware, Inc. 3.3 (Core Profile) Mesa 20.0.8 Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-07 12:13, hash: `cf9275dd4e` Worked: Currently checking, likely caused by one of the geometry node related commits. **Short description of error** The color of the shader sockets is currently red instead of green on my Linux build. **Exact steps for others to reproduce the error** - Open the shader editor
Author
Member

Added subscriber: @rjg

Added subscriber: @rjg

#83474 was marked as duplicate of this issue

#83474 was marked as duplicate of this issue
Author
Member

Added subscriber: @yourhero

Added subscriber: @yourhero
Author
Member

The merged ticket reports that this also occurs on Windows. I can reproduce this with the daily build from build bot of ba740ad2ab

The merged ticket reports that this also occurs on Windows. I can reproduce this with the daily build from build bot of `ba740ad2ab`
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @brecht

Added subscriber: @brecht

This was an intentional change in #82689 (Sockets Colors for int, boolean), though I'm not happy with the current state, see my comment in that task.

This was an intentional change in #82689 (Sockets Colors for int, boolean), though I'm not happy with the current state, see my comment in that task.
Author
Member

This comment was removed by @rjg

*This comment was removed by @rjg*

I suspect the Windows debug build is of an older revision.

I suspect the Windows debug build is of an older revision.
Author
Member

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Author
Member

This ticket is closed because the change was intentional.

This ticket is closed because the change was intentional.
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Member

If you reset the theme, the Shader category color matches the socket color. The commit should've had versioning code to change this automatically, this will be tackled soon.

If you reset the theme, the Shader category color matches the socket color. The commit should've had versioning code to change this automatically, this will be tackled soon.

This issue was referenced by ac7694aee0

This issue was referenced by ac7694aee05047750f955ee2fb0d62942392f6c0
Member

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83500
No description provided.